compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_constructor_pattern_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub type Box { Box(Int) } pub fn main() { let Box(fooBar) = Box(203) }"
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:51
  │
1 │ pub type Box { Box(Int) } pub fn main() { let Box(fooBar) = Box(203) }
  │                                                   ^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: foo_bar
